--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>future-trade-forge</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/png" href="/a-logo-design-showcasing-trademaster-ia-_DPtoavjHQBSYZYuzx1t_ww_WJyGYArsRfyJwQstxd4cqA.jpeg" />
 
     <meta property="og:title" content="future-trade-forge" />
     <meta property="og:description" content="Lovable Generated Project" />
