--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>future-trade-forge</title>
+    <title>Axion Capital</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <link rel="icon" type="image/png" href="/a-logo-design-showcasing-trademaster-ia-_DPtoavjHQBSYZYuzx1t_ww_WJyGYArsRfyJwQstxd4cqA.jpeg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 
     <meta property="og:title" content="future-trade-forge" />
     <meta property="og:description" content="Lovable Generated Project" />
