Update social sharing metadata in index.html to replace Lovable with Axion Capital and provide French copy

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Axion Capital</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Axion Capital - Plateforme avancée d'IA de trading" />
+    <meta name="author" content="Axion Capital" />
     <link rel="icon" type="image/png" href="/logo.png" />
 
-    <meta property="og:title" content="future-trade-forge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Axion Capital" />
+    <meta property="og:description" content="Découvrez la puissance de notre plateforme avancée d'IA de trading pour maximiser vos profits." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@AxionCapital" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
