Commit all changes

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Axion Capital</title>
-    <meta name="description" content="Axion Capital - Plateforme avancée d'IA de trading" />
-    <meta name="author" content="Axion Capital" />
+    <title>Automa</title>
+    <meta name="description" content="Automa - Plateforme avancée d'IA de trading" />
+    <meta name="author" content="Automa" />
     <link rel="icon" type="image/png" href="/logo.png" />
 
-    <meta property="og:title" content="Axion Capital" />
+    <meta property="og:title" content="Automa" />
     <meta property="og:description" content="Découvrez la puissance de notre plateforme avancée d'IA de trading pour maximiser vos profits." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@AxionCapital" />
+    <meta name="twitter:site" content="@Automa" />
     <meta name="twitter:image" content="/logo.png" />
   </head>
 
