Commit all changes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Automa</title>
-    <meta name="description" content="Automa - Plateforme avancée d'IA de trading" />
+    <meta name="description" content="Automa - Plateforme dédiée à l’apprentissage et au développement des connaissances." />
     <meta name="author" content="Automa" />
     <link rel="icon" type="image/png" href="/logo.png" />
 
     <meta property="og:title" content="Automa" />
-    <meta property="og:description" content="Découvrez la puissance de notre plateforme avancée d'IA de trading pour maximiser vos profits." />
+    <meta property="og:description" content="Découvrez Automa, une plateforme pour apprendre et grandir dans un environnement stimulant et enrichissant." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/logo.png" />
 
